--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
     <!-- home section  -->
     <section class="home" id="home">
+        <!-- <video autoplay loop muted playsinline class="bg-video">
+            <source src="videos/banner3.mp4" type="video/mp4">
+             -->
+        </video>
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
@@ -108,7 +112,7 @@
                                 <span>CBSE</span> 
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2009 
+                                    <!-- 2009  -->
                                  </div>
                                     
                             </div>
@@ -119,7 +123,7 @@
                                 <span>Kerala University </span> 
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2011 
+                                    <!-- 2011  -->
                                  </div>
                             </div>
                         </div>
@@ -129,7 +133,7 @@
                                 <span>Kerala University </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2014
+                                    <!-- 2014 -->
                                  </div>  
                             </div>
                         </div>
@@ -139,7 +143,7 @@
                                 <span>Kerala University  </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2017
+                                    <!-- 2017 -->
                                  </div>
                             </div>
                         </div>
@@ -149,7 +153,7 @@
                                 <span>MG University </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2023
+                                    <!-- 2023 -->
                                  </div>
                             </div>
                         </div>
@@ -204,7 +208,7 @@
                 <div class="column left">
                     <div class="text">My creative skills </div>
                     <p>I have a strong creative mindset that allows me to approach problem-solving with innovation and originality. Whether it’s designing user-friendly interfaces, developing efficient code structures, or brainstorming unique solutions, I enjoy thinking outside the box. My ability to blend technical expertise with creativity helps me build intuitive web applications and engaging digital experiences. I am passionate about continuous learning and experimenting with new technologies, ensuring that my work remains dynamic and impactful.</p>
-                    <a href="#">Read more</a>
+                    <a href="files/resume.pdf" download="Megha_Mohan_Resume.pdf">Read more</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -289,26 +293,7 @@
                             </p>
                     </div>
                 </div>
-                <!-- <div class="card">
-                    <div class="box"> -->
-                        <!-- <img src="images/profile-3.jpeg" alt=""> -->
-                        <!-- <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div> -->
-                <!-- <div class="card">
-                    <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div> -->
+                
                 </div>
             </div>
         </div>
@@ -321,7 +306,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Feel free to reach out for collaboration, project inquiries, or just a tech chat! You can connect with me via email or call me at 994694931. Let’s create something amazing together!</p>
+                    <p>Feel free to reach out for collaboration, project inquiries, or just a tech chat! You can connect with me via email. Let’s create something amazing together!</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
