--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <img src="images/linkd.svg" alt="LinkedIn Icon" class="icon">
                     </a>
                 </div>
-                <div class="hire"><a href="files/resume.pdf" download="Megha_Mohan_Resume.pdf">Hire me</a></div>
+                <div class="hire"><a href="files/res.pdf" download="Megha_Mohan_Resume.pdf">Hire me</a></div>
             </div>
             <div class="image-container">
                 <img src="images/p1.jpg" alt=" " class="profile-img">
@@ -80,7 +80,7 @@
                 <div class="column right">
                     <div class="text">I'm Megha and I'm a <span class="typing-2"></span></div>
                     <p>I'm Megha Mohan, a FullStack Developer with expertise in HTML, CSS, JavaScript, Python, React.js, Node.js and databases (MySQL & MongoDB). I enjoy building efficient and scalable web applications. With an MCA degree and hands-on experience, I am constantly learning and exploring new technologies. Looking for opportunities to grow and contribute as a developer.</p>
-                    <a href="files/resume.pdf" download="Megha_Mohan_Resume.pdf">Download CV</a>
+                    <a href="files/res.pdf" download="Megha_Mohan_Resume.pdf">Download CV</a>
                 </div>
             </div>
         </div>
@@ -208,7 +208,7 @@
                 <div class="column left">
                     <div class="text">My creative skills </div>
                     <p>I have a strong creative mindset that allows me to approach problem-solving with innovation and originality. Whether it’s designing user-friendly interfaces, developing efficient code structures, or brainstorming unique solutions, I enjoy thinking outside the box. My ability to blend technical expertise with creativity helps me build intuitive web applications and engaging digital experiences. I am passionate about continuous learning and experimenting with new technologies, ensuring that my work remains dynamic and impactful.</p>
-                    <a href="files/resume.pdf" download="Megha_Mohan_Resume.pdf">Read more</a>
+                    <a href="files/res.pdf" download="Megha_Mohan_Resume.pdf">Read more</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
