--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="qualification__item right">
                             <div class="qualification__info">
                                 <h3>All India Senior School Certificate Examination</h3>
-                                <span>Kerala University </span> 
+                                <span>CBSE</span> 
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     <!-- 2011  -->
